<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="25dp"
              android:paddingRight="25dp"
              android:gravity="center"
              android:weightSum="12"
              android:background="@color/background"
              android:id="@+id/main_menu"
              tools:context=".fragments.MainMenuFragment">
    <TextView
            android:text="@string/tetris"
            android:fontFamily="@font/commodore_pixelized"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="50sp"
            android:textColor="@color/text"/>
    <Button
            style="@style/MainMenuButton"
            android:text="@string/main_menu_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_menu_start"/>
    <Button
            style="@style/MainMenuButton"
            android:text="@string/main_menu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_menu_settings"/>
    <Button
            style="@style/MainMenuButton"
            android:text="@string/main_menu_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_menu_scores"/>
    <Button
            style="@style/MainMenuButton"
            android:text="@string/main_menu_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_menu_exit"/>
</LinearLayout>