<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.SettingsFragment"
              android:orientation="vertical"
              style="AppBackground"
              android:background="@color/background"
              android:gravity="center_horizontal"
>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_description"
                android:id="@+id/settings_description"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:fontFamily="@font/commodore_pixelized"
                android:layout_marginBottom="10pt"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/settings"
        >
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_difficulty_level_down"
                    android:layout_weight="2"
                    style="@style/Button"
                    android:text="@string/settings_difficulty_level_down"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_difficulty_level"
                    android:text="10"
                    android:fontFamily="@font/commodore_pixelized"
                    android:textColor="@color/text"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:layout_weight="4"
                    android:layout_marginTop="7dp"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_difficulty_level_up"
                    android:layout_weight="2"
                    style="@style/Button"
                    android:text="@string/settings_difficulty_level_up"/>
            <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/settings_back"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Button"
            tools:layout_editor_absoluteY="377dp"
            app:layout_constraintHorizontal_bias="0.958"
            android:text="@string/navigation_back"/>

</LinearLayout>